--- a/wp-content/themes/Lilim-Theme-Wordpress/css/variables.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/css/variables.less
@@ -1,7 +1,19 @@
-////////color
+////color
 @primary-color: #986794;
+@gray-light: #d8d8d8;
 
 @white-color: #fff;
 
 ////font
 @main-font: 'Roboto', 'Helvetica Neue', Helvetica, 'Hiragino Sans GB', 'Hiragino Sans GB W3', 'Microsoft YaHei', sans-serif;
+
+@f-small-size: 12px;
+@f-normal-size : 14px;
+@f-large-size: 16px;
+
+////sprite
+@i-grid-icon-2: 0, -92px;
+@i-grid-icon-3: 0, -138px;
+@i-grid-icon-4: 0, -184px;
+@i-grid-icon-5: 0, -276px;
+@i-grid-icon-1: 0, -46px;
