--- a/wp-content/themes/Lilim-Theme-Wordpress/css/mixins.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/css/mixins.less
@@ -21,6 +21,20 @@
   transform         : translateX(@val);
 }
 
+.rotateY(@val) {
+  -moz-transform    : rotateY(@val);
+  -webkit-transform : rotateY(@val);
+  -o-transform      : rotateY(@val);
+  transform         : rotateY(@val);
+}
+
+.rotateX(@val) {
+  -moz-transform    : rotateX(@val);
+  -webkit-transform : rotateX(@val);
+  -o-transform      : rotateX(@val);
+  transform         : rotateX(@val);
+}
+
 .clearfix() {
   &:before,
   &:after {
@@ -29,5 +43,61 @@
   }
   &:after {
     clear : both;
+  }
+}
+
+.display(@var) {
+  display : @var;
+}
+
+.sprite-position(@sprite) {
+  @sprite-offset-x: extract(@sprite, 1);
+  @sprite-offset-y: extract(@sprite, 2);
+  background-position: @sprite-offset-x  @sprite-offset-y;
+}
+
+.grid-icon(@sprite,@color) {
+  .heading {
+    .avatar-icon {
+      .front {
+        .sprite-position(@sprite);
+      }
+      .back {
+        a {
+          background-color : lighten(@color,32%);
+        }
+      }
+    }
+    .tag {
+      ul {
+        &.show {
+          li {
+            &:hover {
+              background-color : @color;
+              .tag-bar {
+                background-color : @color;
+              }
+            }
+          }
+        }
+        li {
+          &:nth-child(even) {
+            .tag-bar {
+              background-color : lighten(@color,42%);
+            }
+          }
+          &:nth-child(odd) {
+            .tag-bar {
+              background-color : lighten(@color,22%);
+            }
+          }
+          &:first-child {
+            .tag-bar {
+              background-color : @color !important;
+            }
+          }
+        }
+      }
+    }
   }
 }
